--- a/src/scss/base/_boilerplate.scss
+++ b/src/scss/base/_boilerplate.scss
@@ -34,9 +34,9 @@ img, picture, video, canvas, svg {
   max-width: 100%;
 }
 /*
-  7. Remove built-in form typography styles
+  7. Remove built-in typography styles
 */
-input, button, textarea, select {
+* {
   font: inherit;
 }
 /*
@@ -44,4 +44,8 @@ input, button, textarea, select {
 */
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
 }
