--- a/src/scss/base/_boilerplate.scss
+++ b/src/scss/base/_boilerplate.scss
@@ -46,6 +46,9 @@ p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
 
+/* some default styling */
+
 body {
-  font-family: 'Inter', sans-serif;
+  background-color: var(--clr-neutral-200);
+  color: var(--clr-neutral-400);
 }
