--- a/src/scss/base/_boilerplate.scss
+++ b/src/scss/base/_boilerplate.scss
@@ -23,7 +23,7 @@ html, body {
   5. Improve text rendering
 */
 body {
-  line-height: 1.5;
+  line-height: 1.6;
   -webkit-font-smoothing: antialiased;
 }
 /*
@@ -47,8 +47,19 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 /* some default styling */
+html {
+  scroll-behavior: smooth;
+  scroll-padding: 1em;
+}
 
 body {
   background-color: var(--clr-neutral-200);
   color: var(--clr-neutral-400);
+}
+
+/* focus styling when element selected with via keyboard */
+body *:focus-visible {
+  outline-width: 1px;
+  outline-style: solid;
+  outline-offset: 0.25em;
 }
