--- a/src/scss/abstracts/_breakpoints.scss
+++ b/src/scss/abstracts/_breakpoints.scss
@@ -1,13 +1,30 @@
-// Breakpoints 640px, 960px, 1440px, 1920
+// Breakpoints 720px, 1024px, 1440px, 1920px
 $breakpoints-up: (
-  "small" : 40em,
-  "medium" : 60em,
+  "small" : 45em,
+  "medium" : 64em,
   "large": 90em,
   "xlarge": 120em
 );
 
+// Breakpoints 719.5px, 1023.5px, 1439.5px, 1919.5px
+
+$breakpoints-down: (
+  "small" : 44.96875em,
+  "medium" : 63.96875em,
+  "large": 89.96875em,
+  "xlarge": 119.96875em
+);
+
+// min width media query
 @mixin minWidth($size) {
   @media (min-width: map-get($breakpoints-up, $size)) {
+    @content;
+  }
+}
+
+//max width media query
+@mixin maxWidth($size) {
+  @media (max-width: map-get($breakpoints-down, $size)) {
     @content;
   }
 }
