--- a/src/scss/layouts/_new.scss
+++ b/src/scss/layouts/_new.scss
@@ -1,7 +1,13 @@
+@use '../abstracts/breakpoints' as brk;
+
 .new {
   background-color: var(--clr-neutral-900);
   color: var(--clr-neutral-200);
   padding: 1.5em;
+
+  @include brk.minWidth(medium) {
+    grid-row: span 2;
+  }
 
   &__title {
     color: var(--clr-primary-400);
