--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -7,11 +7,11 @@
   --fw-bold: 700;
   --fw-extra-bold: 800;
 
-  --fs-400: 0.9rem;
-  --fs-500: 1.1rem;
-  --fs-600: 1.2rem;
-  --fs-700: 1.75rem;
-  --fs-900: 2.4rem;
+  --fs-400: clamp(0.625rem, 4vw, 0.9375rem);
+  --fs-500: clamp(0.875rem, 4.75vw, 1.125rem);
+  --fs-600: clamp(1rem, 5.25vw, 1.25rem);
+  --fs-700: clamp(1.5rem, 7.5vw, 2.25rem);
+  --fs-900: clamp(1.85rem, 11vw, 3.625rem);
 }
 
 body {
