--- a/src/scss/layouts/_trending.scss
+++ b/src/scss/layouts/_trending.scss
@@ -41,4 +41,23 @@
       }
     }
   }
+
+  &__num {
+    &::before {
+      display: block;
+      font-size: var(--fs-700);
+      font-weight: var(--fw-bold);
+      color: var(--clr-neutral-300);
+      margin-bottom: 0.25rem;
+    }
+    &--1::before {
+      content: '01';
+    }
+    &--2::before {
+      content: '02';
+    }
+    &--3::before {
+      content: '03';
+    }
+  }
 }
