--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,12 +1,13 @@
 @use '../abstracts/breakpoints' as brk;
 
 .header {
-  --padd-block: 2.5em;
-  padding-top: var(--padd-block);
-  padding-bottom: var(--padd-block);
+  --header-padd-block: 2.5em;
+  padding-top: var(--header-padd-block);
+  padding-bottom: var(--header-padd-block);
+  //isolation: isolate;
 
   @include brk.minWidth(medium) {
-    --padd-block: 4em;
+    --header-padd-block: 4em;
   }
 
   &__logo {
@@ -16,14 +17,35 @@
   &__nav {
     @include brk.maxWidth(medium) {
       display: none;
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: var(--clr-neutral-200);
+      width: 70%;
+      height: 100%;
+      padding: 1.25em;
+      z-index: 1;
+      box-shadow: 0 0 0 1000vw hsla(240, 100%, 5%, 0.5);
+      overflow-y: scroll;
     }
   }
 
   &__nav-links {
-    font-size: 1.1em;
+    font-size: var(--fs-400);
     list-style: none;
+    padding: 0;
     display: flex;
     gap: 2.5rem;
+
+    @include brk.maxWidth(medium) {
+      font-size: var(--fs-500);
+      font-weight: var(--fw-bold);
+      flex-direction: column;
+      gap: 1.5rem;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+    }
 
     a {
       color: inherit; // inherits from body font color
@@ -39,6 +61,12 @@
       outline: 1px solid currentColor;
       outline-offset: 0.25em;
     }
+  }
+}
+
+.header .container {
+  @include brk.maxWidth(medium) {
+    max-width: unset;
   }
 }
 
