fix trending thumbnails

--- a/src/scss/layouts/_trending.scss
+++ b/src/scss/layouts/_trending.scss
@@ -20,7 +20,8 @@
   }
 
   &__list-thumbnail {
-    max-width: 6.5rem;
+    width: 6.5rem;
+    max-height: 10rem;
     object-fit: cover;
     object-position: center;
   }
